--- a/views/admin/category-add.ejs
+++ b/views/admin/category-add.ejs
@@ -17,15 +17,22 @@
     <form method="post">
         <div class="space-y-12 p-20 flex">
           <div class="border-b border-gray-900/10 pb-12">
-            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-              <div class="sm:col-span-3">
+            <div class="flex-col mt-10 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="sm:col-span-3 w-52">
                 <label for="categoryName" class="block text-sm font-medium leading-6 text-gray-900">Category name</label>
                 <div class="mt-2">
                   <input type="text" name="categoryName" id="categoryName" autocomplete="given-name" class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+
+              <div class="sm:col-span-3 mt-12 ">
+                <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Category Description</label>
+                <div class="mt-2">
+                  <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                </div>
+              </div>
         </div>
-        <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium  text-white bg-yellow-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <button type="submit" class="mt-12 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium  text-white bg-yellow-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
             Add Category
         </button>
         </div>
