--- a/views/admin/category-edit.ejs
+++ b/views/admin/category-edit.ejs
@@ -4,11 +4,18 @@
     <form method="POST"  action="/admin/category-edit/<%= categories ? categories._id : '' %>">
         <div class="space-y-12 p-20 flex">
           <div class="border-b border-gray-900/10 pb-12">
-            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="flex-col mt-10 gap-x-6 gap-y-8 sm:grid-cols-6">
               <div class="sm:col-span-3">
                 <label for="categoryName" class="block text-sm font-medium leading-6 text-gray-900">Product Name</label>
                 <div class="mt-2">
                   <input value="<%= categories.categoryName %>"  type="text" name="categoryName" id="categoryName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+
+              <div class="sm:col-span-3 mt-12 ">
+                <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Category Description</label>
+                <div class="mt-2">
+                  <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                 </div>
               </div>
 
