--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -150,7 +150,7 @@
                             Shipping Tax<span class="ml-2">00.00₹</span></div>
                         <div
                             class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                            Total<span class="ml-2"> <%= totalPrice %>₹</span></div>
+                            Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹</span></div>
                     </div>
                 </div>
             </div>
