--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -40,10 +40,10 @@
      
       
         <div class="flex flex-col justify-start items-start w-full space-y-4 md:space-y-6 xl:space-y-8">
-          <div class="flex flex-col justify-start items-start  bg-gray-50 px-4 py-4 md:p-6 xl:p-8 w-full  border border-gray-400">
+          <div class="flex flex-col justify-start items-start  bg-gray-50 px-4 py-4 md:p-6 xl:p-8 w-full  border-t shadow-xl">
             <p class="text-lg md:text-xl dark:text-gray-950 font-semibold leading-6 xl:leading-5 text-gray-800">Customer’s Cart</p>
             <% order.products.forEach(product => { %>
-            <div class="mt-4 md:mt-6 flex flex-col md:flex-row justify-start items-start md:items-center md:space-x-6 xl:space-x-8 w-full dark:bg-gray-300 p-2">
+            <div class="mt-4 md:mt-6 flex flex-col md:flex-row justify-start items-start md:items-center md:space-x-6 xl:space-x-8 w-full dark:bg-white shadow-xl border-t p-2">
               <div class="pb-4 md:pb-8 w-full md:w-40">
                 <img class="w-full hidden md:block" src="/product_images/<%= product.productImage[0] %>" alt="dress" />
                
@@ -68,8 +68,8 @@
           </div>
        
           <!-- Summary -->
-          <div class="flex justify-center flex-col md:flex-row  items-stretch w-full space-y-4 md:space-y-0 md:space-x-6 xl:space-x-8">
-            <div class="flex flex-col px-4 py-6 md:p-6 xl:p-8 w-full bg-gray-50 dark:bg-slate-200 space-y-6">
+          <div class="flex justify-center flex-col md:flex-row  items-stretch w-96 h-56 space-y-4 md:space-y-0 md:space-x-6 xl:space-x-8">
+            <div class="flex flex-col px-4  md:p-6 xl:p-8 w-full bg-gray-50 dark:bg-white shadow-xl border-t space-y-6">
               <h3 class="text-xl dark:text-gray-950 font-semibold leading-5 text-gray-800">Summary</h3>
               <div class="flex justify-center items-center w-full space-y-4 flex-col border-gray-200 border-b pb-4">
                 <div class="flex justify-between w-full">
@@ -96,7 +96,7 @@
 
 
       <!-- Shipping Component -->
-      <div class="flex flex-col justify-center px-4 py-6 md:p-6 xl:p-8 w-full h-52 bg-gray-50 dark:bg-slate-200 space-y-6">
+      <div class="flex rounded-lg flex-col justify-center px-4 py-6 md:p-6 xl:p-8 w-full h-52 bg-white shadow-xl border-t dark:bg-white space-y-6">
         <h3 class="text-xl dark:text-gray-950 font-semibold leading-5 text-gray-800">Shipping</h3>
         <div class="flex justify-between items-start w-full">
           <div class="flex justify-center items-center space-x-4">
@@ -108,19 +108,20 @@
             </div>
           </div>
         </div>
+      
         <div class="w-full flex justify-center items-center">
-          <button class="hover:bg-black dark:bg-white dark:text-gray-800 dark:hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 py-2 w-96 h-10 md:w-full bg-gray-800 text-base font-medium leading-4 text-white"><%= order.status %></button>
+          <button class="hover:bg-black dark:bg-stone-200 mx-5 dark:text-gray-800 dark:hover:bg-slate-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 py-2 w-96 h-10 md:w-full bg-gray-800 text-base font-medium leading-4 text-white">
+            <%= order.status %></button>
+       
+          <button class="hover:bg-black dark:bg-stone-200 dark:text-gray-800 dark:hover:bg-slate-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 py-2 w-96 h-10 md:w-full bg-gray-800 text-base font-medium leading-4 text-white">
+           Cancel</button>
         </div>
       </div>
 
     </div>
 
     <!-- Customer Component -->
-    <div class="bg-gray-50 dark:bg-slate-200 w-full xl:w-96 flex justify-between items-center md:items-start px-4 my-12 md:p-6 xl:p-8 flex-col">
-     
- 
-
-
+    <div class="bg-white dark:bg-stone-100 shadow-xl border-t w-full xl:w-96 flex justify-between items-center md:items-start px-4 my-12 md:p-6 xl:p-8 flex-col">
         <div class="flex justify-between xl:h-full items-stretch w-full flex-col mt-6 md:mt-0">
           <div class="flex justify-center md:justify-start xl:flex-col flex-col md:space-x-6 lg:space-x-8 xl:space-x-0 space-y-4 xl:space-y-12 md:space-y-0 md:flex-row items-center md:items-start">
             <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4 xl:mt-8">
