completed coupon management

--- a/views/admin/coupon-add.ejs
+++ b/views/admin/coupon-add.ejs
@@ -34,8 +34,8 @@
                   <input type="number" name="discount" id="discount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
-                  <label for="maximumAmount">Minimum Amount </label>
-                  <input type="number" name="maximumAmount" id="maximumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <label for="minimumAmount">Minimum Amount </label>
+                  <input type="number" name="minimumAmount" id="minimumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
                   <label for="expiryDate">Coupon expiry </label>
