--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -78,15 +78,15 @@
 
                 <section class="mt-12">
                     <h3 class="text-lg font-bold text-[#333] mb-6">Coupons</h3>
-                        <select id="countries" class="bg-gray-50 h-10 border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                            <option selected>Choose coupon</option>
-                            <option value="US">United States</option>
-                            <option value="CA">Canada</option>
-                            <option value="FR">France</option>
-                            <option value="DE">Germany</option>
+                        <select id="couponValues" class="bg-gray-50 h-10 rounded-xl border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <option selected disabled  selected> Choose Coupon </option>
+                            <% coupon.forEach(coup => { %>
+                            <option value="<%= coup.discount %>"><%= coup.couponCode %></option>
+                            
+                            <% }) %>
                         </select>
                     <div class="flex gap-6 max-sm:flex-col mt-5">
-                      <button id="" type="button" class="rounded-md px-6 py-1.5 w-32 text-sm font-thin bg-cyan-400 text-gray-900 hover:bg-[#222] hover:text-white">
+                      <button id="addCoupon" type="button" class="rounded-md px-6 py-1.5 w-32 text-sm font-thin bg-cyan-400 text-gray-900 hover:bg-[#222] hover:text-white">
                         Add Coupon
                     </button>
                     </div>
@@ -143,11 +143,16 @@
                     
                         
                         <div
-                            class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                            Subtotal<span class="ml-2"> <%= totalPrice %>₹ </span></div>
+                            class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                            Subtotal<span id="subTotal" class="ml-2"> <%= totalPrice %>₹ </span></div>
                         <div
-                            class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                            Shipping Tax<span class="ml-2">00.00₹</span></div>
+                            class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                            Shipping Tax<span class="ml-2">00.00₹</span>
+                        </div>
+                        <div
+                            class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                            Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
+                        </div>
                         <div
                             class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
                             Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹</span></div>
@@ -162,15 +167,12 @@
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
 
-
+    //<------------ order creating -------------->
 document.addEventListener("DOMContentLoaded", function() {
-    
     const placeOrderButton = document.getElementById('placeOrder');
     placeOrderButton.addEventListener('click', function() {
-
         const paymentMethod = document.getElementsByName('paymentMethod');
     let selectedValue = "";
-
     const totalPriceElement = document.getElementById('totalPrice');
         const totalPrice = parseFloat(totalPriceElement.textContent);
     paymentMethod.forEach(radio => {
@@ -181,105 +183,127 @@ document.addEventListener("DOMContentLoaded", function() {
 if(!selectedValue){
             alert('Please select a payment method');
         }
-        
+
+
       if(selectedValue == "Cash on Delivery"){
         const paymentMethod = selectedValue;
 
-       fetch('/placeOrder',{
-        method:"POST",
-        headers:{
-            "Content-Type" : "application/json"
-        },
-        body:JSON.stringify({
-            totalPrice : totalPrice,
-            paymentMethod : paymentMethod
-        })
-    })}else{
+
+        fetch('/placeOrder',{
+                        method:"POST",
+                        headers:{
+                            "Content-Type" : "application/json"
+                        },
+                        body:JSON.stringify({
+                            totalPrice : totalPrice,
+                            paymentMethod : paymentMethod
+                        })
+                        }).then(() => {
+                            window.location.href = '/orderSuccess'
+                        })
+
+
+}else{
         var orderId;
-
-     fetch('/create-order', {
-    method: "POST",
-    headers: {
-        "Content-Type": "application/json"
-       },
-    body: JSON.stringify({
-        "totalPrice": totalPrice
+        fetch('/create-order', {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+            "totalPrice": totalPrice
+        })
     })
-})
-.then(response => response.json())
-.then(data => {
-   orderId = data.id;
-   
-console.log('THE ORDER ID : ',orderId); 
-})
-.catch(error => {
-    console.error('Error:', error); 
-});
-
-
-var options = {
-    "key": "rzp_test_3aIOQlQc4egRLE", 
-    "amount": totalPrice * 100,
-    "currency": "INR",
-    "name": "OneCart", 
-    "description": "Test Transaction",
-    "image": "/images/onecart-log.avif",
-    "order_id": orderId, 
-    "handler": function (response){
-        const paymentMethod = selectedValue;
-                fetch('/placeOrder',{
-                method:"POST",
-                headers:{
-                    "Content-Type" : "application/json"
-                },
-                body:JSON.stringify({
-                    totalPrice : totalPrice,
-                    paymentMethod : paymentMethod
-                })
-                }).then(() => {
-                    window.location.href = '/orderSuccess'
-                })
-        
-
-
-        // alert(response.razorpay_payment_id);
-        // alert(response.razorpay_order_id);
-        // alert(response.razorpay_signature)
-    },
-    "prefill": { 
-        "name": "Gaurav Kumar", //your customer's name
-        "email": "gaurav.kumar@example.com", 
-        "contact": "9000090000"  //Provide the customer's phone number for better conversion rates 
-    },
-    "notes": {
-        "address": "Razorpay Corporate Office"
-    },
-    "theme": {
-        "color": "#3399cc"
-    }
-};
-var rzp1 = new Razorpay(options);
-rzp1.on('payment.failed', function (response){
-        alert(response.error.code);
-        alert(response.error.description);
-        alert(response.error.source);
-        alert(response.error.step);
-        alert(response.error.reason);
-        alert(response.error.metadata.order_id);
-        alert(response.error.metadata.payment_id);
-});
-document.getElementById('placeOrder').onclick = function(e){
-    rzp1.open();
-    e.preventDefault();
-}
-
-        
-      }
+    .then(response => response.json())
+    .then(data => {
+    orderId = data.id;
     
-})
+    console.log('THE ORDER ID : ',orderId); 
+    })
+    .catch(error => {
+        console.error('Error:', error); 
+    });
+        var options = {
+            "key": "rzp_test_3aIOQlQc4egRLE", 
+            "amount": totalPrice * 100,
+            "currency": "INR",
+            "name": "OneCart", 
+            "description": "Test Transaction",
+            "image": "/images/onecart-log.avif",
+            "order_id": orderId, 
+            "handler": function (response){
+                const paymentMethod = selectedValue;
+                        fetch('/placeOrder',{
+                        method:"POST",
+                        headers:{
+                            "Content-Type" : "application/json"
+                        },
+                        body:JSON.stringify({
+                            totalPrice : totalPrice,
+                            paymentMethod : paymentMethod
+                        })
+                        }).then(() => {
+                            window.location.href = '/orderSuccess'
+                        })
+                
+                // alert(response.razorpay_payment_id);
+                // alert(response.razorpay_order_id);
+                // alert(response.razorpay_signature)
+            },
+        "prefill": { 
+            "name": "Gaurav Kumar", //your customer's name
+            "email": "gaurav.kumar@example.com", 
+            "contact": "9000090000"  //Provide the customer's phone number for better conversion rates 
+        },
+        "notes": {
+            "address": "Razorpay Corporate Office"
+        },
+        "theme": {
+            "color": "#3399cc"
+        }
+    };
+        var rzp1 = new Razorpay(options);
+        rzp1.on('payment.failed', function (response){
+                alert(response.error.code);
+                alert(response.error.description);
+                alert(response.error.source);
+                alert(response.error.step);
+                alert(response.error.reason);
+                alert(response.error.metadata.order_id);
+                alert(response.error.metadata.payment_id);
+            });
+            document.getElementById('placeOrder').onclick = function(e){
+                rzp1.open();
+                e.preventDefault();
+                }}
+                })
+            });
+
+   //<------------ coupon applying -------------->
+
+const addCouponButton = document.getElementById('addCoupon');
+
+addCouponButton.addEventListener('click', () => {
+
+    
+    const subTotal = parseFloat(document.getElementById('subTotal').innerText);
 
 
-   })
+    const discount = parseFloat(document.getElementById('couponValues').value);
+
+    const discountAmount = (subTotal * discount) / 100;
+
+    const total = document.getElementById('totalPrice').innerText = subTotal - discountAmount +"₹";
+
+    const discountDisplay = document.getElementById('discountAmount').innerText = discountAmount;
+
+    console.log('Selected coupon:', selectedCoupon);
+});
+
+
+
+
+
    </script>
 
         <%- include('../partials/footer') %>
